# readerdeleter

./: .gitignore  README.md  dafsa_graph.py  dafsa_sandbox.py  dafsa_timing.py  pyproject.toml  scrabble_gui.py  tournament.py  training_tournament.py
notes/: mission_superhuman.md
readerdeleter/: CMakeLists.txt  __init__.py  board.py  compile_commands.json  gaddag.py
readerdeleter/cpp/: alphabet.h  boardsearch.cpp  dafsa.cpp  dawg.cpp
scrabble/: board.py  board_converter.py  daniel_bot.py  gatekeeper.py  incrementalist.py  location.py  mctsnn_bot.py  move.py  simulated_board.py  simulated_gatekeeper.py  words.txt
test/: test_board.py  test_boardsearch.py  test_dafsa.py  test_dawg.py  test_gaddag.py
