[tool.poetry]
name = "scrabble"
version = "0.1.0"
description = ""
authors = ["Daniel <rowedanielp@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pybind11 = "^2.13.5"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core", "pybind11"]
build-backend = "poetry.core.masonry.api"
