[tool.poetry]
name = "readerdeleter"
version = "0.1.0"
description = ""
authors = ["Daniel <rowedanielp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pybind11 = "^2.13.6"
matplotlib = "^3.9.3"
networkx = "^3.4.2"
numpy = "^2.2.0"
scipy = "^1.14.1"
tk = "^0.1.0"
torch = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
