[tool.poetry]
name = "readerdeleter"
version = "0.1.0"
description = ""
authors = ["Daniel <rowedanielp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.9.3"
networkx = "^3.4.2"
numpy = "<2"
scipy = "^1.14.1"
tk = "^0.1.0"
pybind11 = "^2.13.6"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.10.0"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
